--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "body-parser": "^1.19.1",
     "express": "^4.17.2",
     "express-jwt": "^6.1.0",
+    "fuse.js": "^6.5.3",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "serve-static": "^1.14.2",
@@ -42,8 +43,9 @@
     "jwt-decode": "^3.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "reactstrap": "^9.0.1",
     "react-router-dom": "v6",
+    "react-use": "^17.3.2",
+    "reactstrap": "^9.0.1",
     "ts-node": "^10.4.0",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.4.4",
