--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "vite:preview": "vite preview",
     "server:dev": "ts-node-dev src/index.ts",
     "server:build": "tsc",
-    "server:migrate": "ts-node src/index.ts migrate",
+    "server:test": "jest",
     "typeorm": "ts-node node_modules/typeorm/cli.js",
     "keygen": "ts-node keygen.ts"
   },
@@ -32,20 +32,25 @@
     "@types/body-parser": "^1.19.2",
     "@types/express": "^4.17.13",
     "@types/express-jwt": "^6.0.4",
+    "@types/jest": "^27.4.0",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/morgan": "^1.9.3",
     "@types/node": "^17.0.10",
     "@types/react": "^17.0.33",
     "@types/react-dom": "^17.0.10",
     "@types/serve-static": "^1.13.10",
+    "@types/supertest": "^2.0.11",
     "@vitejs/plugin-react": "^1.0.7",
     "bootstrap": "^5.1.3",
+    "jest": "^27.4.7",
     "jwt-decode": "^3.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "v6",
     "react-use": "^17.3.2",
     "reactstrap": "^9.0.1",
+    "supertest": "^6.2.2",
+    "ts-jest": "^27.1.3",
     "ts-node": "^10.4.0",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.4.4",
